--- a/cash_register/cash_register.html
+++ b/cash_register/cash_register.html
@@ -22,6 +22,11 @@
 	      </tbody>
 	      <tfoot class="summary">
           <tr>
+            <th>Return</th>
+            <th></th>
+            <th id="refund"></th>
+          </tr>
+          <tr>
             <th>SUBTOTAL</th>
             <th></th>
             <th id="subtotal">$0.00</th>
